# openai_sdk_agent

./: pyproject.toml
src/: .env
src/openai_sdk/: main.py
