[project]
name = "openai-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aamirshafiq14", email = "aamirshafiq1407@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.7",
]

[project.scripts]
openai-sdk = "openai_sdk:main"
agent1 = "openai_sdk.main:agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
